# rosiris_manipulation

rosiris_manipulation_interfaces/: CMakeLists.txt  package.xml
rosiris_manipulation_interfaces/msg/: CollisionEntry.msg  CollisionMatrixUpdate.msg  CollisionObject.msg  CollisionObjectPoseUpdate.msg  ServiceErrorCode.msg  ServiceResult.msg
rosiris_manipulation_interfaces/srv/: AddCollisionObjects.srv  AttachCollisionObject.srv  DetachCollisionObject.srv  GetAttachedCollisionObjectIds.srv  GetCollisionObjectIds.srv  LoadScenario.srv  MoveCollisionObjects.srv  RemoveCollisionObjects.srv  ResetScenario.srv  UpdateAllowedCollisions.srv
rosiris_manipulation_utils/: .clang-format  CMakeLists.txt  package.xml
rosiris_manipulation_utils/demos/: planning_scene_manager_demo.py
rosiris_manipulation_utils/doc/scenario/: scenario_definition_reference.yml
rosiris_manipulation_utils/include/rosiris_manipulation_utils/: planning_scene_manager.hpp
rosiris_manipulation_utils/launch/: planning_scene_manager_node.launch.py  scenario_manager_node.launch.py
rosiris_manipulation_utils/rosiris_manipulation_utils/: mesh_loader.py  scenario_instance.py  scenario_loader.py  scenario_manager.py  scenario_models.py  utilities.py
rosiris_manipulation_utils/src/: planning_scene_manager.cpp  planning_scene_manager_node.cpp
scene_management/: CMakeLists.txt  package.xml
scene_management/demos/: planning_scene_manager_demo.py  planning_scene_manager_demo.sh
scene_management/doc/scenario/: scenario_definition_reference.json
scene_management/include/scene_management/: planning_scene_manager.hpp
scene_management/launch/: planning_scene_manager_node.launch.py  scenario_manager_node.launch.py
scene_management/scene_management/: mesh_loader.py  scenario_instance.py  scenario_loader.py  scenario_manager.py  scenario_models.py
scene_management/src/: planning_scene_manager.cpp  planning_scene_manager_node.cpp
