<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosiris_manipulation_utils</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mamueluth@gmail.com">Manuel M.</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>


  <depend>python3-pyassimp</depend>
  <!-- Core ROS -->
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <!-- MoveIt -->
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_msgs</depend>
  <!-- Required by MoveIt -->
  <depend>urdf</depend>
  <depend>srdfdom</depend>
  <!-- Messages, services and action interfaces -->
  <depend>geometry_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>
  <depend>rosiris_manipulation_interfaces</depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf_transformations</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
